--- a/GameOfLife/Makefile
+++ b/GameOfLife/Makefile
@@ -1,2 +1,2 @@
 all:
-	gcc -I src/include -L src/lib -o GameOfLifeV2 GameOfLifeV2.c -lmingw32 -lSDL2main -lSDL2
+	gcc -I src/include -L src/lib -o GameOfLife GameOfLife.c -lmingw32 -lSDL2main -lSDL2
